fix: 불필요한 부분 제거 후 Footer 수정

--- a/.env.example
+++ b/.env.example
@@ -497,7 +497,7 @@ ALLOW_SHARED_LINKS_PUBLIC=true
 #===================================================#
 
 APP_TITLE=LibreChat
-# CUSTOM_FOOTER="My custom footer"
+CUSTOM_FOOTER="The SMC AI Platform - 슴씨인을 위한 AI, 한곳에서"
 HELP_AND_FAQ_URL=https://librechat.ai
 
 # SHOW_BIRTHDAY_ICON=true
